bk_ida/gccida/c0/insert
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/cse.c:2016:82: error: must use 'enum' tag to refer to type 'machine_mode'
 struct table_elt * insert( rtx x,  struct table_elt *classp, unsigned int hash, machine_mode mode) 
                                                                                 ^
                                                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/cse.c:2111:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/cse.c:2112:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/cse.c:2254:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/cse.c:2256:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( classp->exp->fld[0].rtuint); 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/cse.c:2307:47: error: use of undeclared identifier 'machine_mode'
x_ent->const_rtx = gen_lowpart_if_possible( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), p_1->exp); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/cse.c:2307:62: error: expected expression
x_ent->const_rtx = gen_lowpart_if_possible( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), p_1->exp); 
                                                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/insert/src/obj/cse.o] Error 1
